authentication and footer

--- a/public/languages/groups.json
+++ b/public/languages/groups.json
@@ -1,14 +1,18 @@
 [
-    {
-        "name": "english",
-        "languages": [
-            "english",
-            "english_1k",
-            "english_5k",
-            "english_10k",
-            "english_25k",
-            "english_commonly_misspelled",
-            "english_doubleletter"
-        ]
-    }
+  {
+    "name": "english",
+    "languages": [
+      "english",
+      "english_1k",
+      "english_5k",
+      "english_10k",
+      "english_25k",
+      "english_commonly_misspelled",
+      "english_doubleletter"
+    ]
+  },
+  {
+    "name": "geography",
+    "languages": ["countries", "capitals"]
+  }
 ]
